# redis-example

database_example_go/: go.mod  go.sum  main.go
database_example_php/: .env.example  package-lock.json
database_example_php/resources/views/: welcome.blade.php
database_example_php/routes/: web.php
database_example_rs/: Cargo.toml
database_example_rs/src/: main.rs
