[package]
name = "db_example_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.45"
bus = "2.2.3"
clap = "3.0.0-beta.5"
colored = "2.0.0"
crossbeam = "0.8.1"
crossbeam-channel = "0.5.1"
log = "0.4.14"
redis = "0.21.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.71"
simple_logger = "1.13.0"
tungstenite = "0.16.0"
